--- a/force-app/main/default/lwc/lwcRRC/lwcRRC.html
+++ b/force-app/main/default/lwc/lwcRRC/lwcRRC.html
@@ -1,5 +1,6 @@
 <template>
-    <div class="block_padding">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, nemo vitae? Voluptate voluptatem perferendis iste dolorem vero porro eum facilis?
-    </div>
+  <div class="block_padding">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, nemo
+    vitae? Voluptate voluptatem perferendis iste dolorem vero porro eum facilis?
+  </div>
 </template>
