--- a/force-app/main/default/lwc/driverRacingResults/driverRacingResults.html
+++ b/force-app/main/default/lwc/driverRacingResults/driverRacingResults.html
@@ -1,13 +1,14 @@
 <template>
     <div class="slds-box slds-theme_default">
         <template if:true={isLoaded}>
-                <h3 class="slds-text-heading_large slds-text-align_left">
+                <h3 class="slds-text-heading_medium slds-text-align_left">
                     Driver Win Races
                 </h3>
-                <lightning-datatable
+                <lightning-datatable            
+                    hide-checkbox-column
                     data={data}
                     columns={columns}
-                    key-field="id"
+                    key-field="id"         
                     >
                 </lightning-datatable>
             </template>
